--- a/conserto-front/src/app/app.component.html
+++ b/conserto-front/src/app/app.component.html
@@ -1,9 +1,1 @@
-<form #login = "ngForm" (ngSubmit) = "onClickSubmit(login.value)" >
-  <input type = "text" name = "email" placeholder = "email" ngModel>
-  <br/>
-  <input type = "password" name = "pwd" placeholder = "password" ngModel>
-  <br/>
-  <input type = "submit" value = "submit">
-</form>
-
-<router-outlet></router-outlet>
+<h1>hello</h1>
